# Palmy-Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
.github/workflows/: Build With Cmake.yml  Mingw Makefile Release Cmake.yml  Visual Studio Release Cmake.yml  cmake-single-platform.yml
Assets/Shaders/: QuadFragmentShader.glsl  QuadVertexShader.glsl
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp
Palmy/: CMakeLists.txt  Palmy.h
Palmy/src/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.cpp  Window.h  pch.h
Palmy/src/Application/: Application.cpp  Application.h  AssetMetaGenerator.cpp  AssetMetaGenerator.h  ImGuiContext.cpp  ImGuiContext.h  Input.cpp  Input.h  KeyCodes.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Palmy/src/Core/: Core.h  EntryPoint.h  Log.cpp  Log.h  RendererDebugger.cpp  RendererDebugger.h  Time.h
Palmy/src/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Palmy/src/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Palmy/src/Math/: Math.h
Palmy/src/Rendering/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Renderable.h  Renderer2D.cpp  Renderer2D.h  RendererApi.cpp  RendererApi.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Palmy/src/Utility/: StringUtility.h  ThreadSafeQueue.h
Palmy/src/WindowsSpecific/: WindowsAssetMetaGenerator.cpp  WindowsAssetMetaGenerator.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Background.h  Bird.cpp  Bird.h  PipeGenerator.cpp  PipeGenerator.h  PipeManager.cpp  PipeManager.h  Sandbox.cpp  TestApplication.cpp
Scripts/: Generate_MSVC.bat  Generate_MSVC_Release.bat  Generate_Makefile.bat  Generate_Makefile_Release.bat
